# moondeck-v2

./: .env.example  .gitignore  AGENTS.org  ARCHITECTURE.org  Cargo.toml  README-0.org  README.org  TODO.org  flake.nix  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
config/: README.org  components.lua  init.lua  layout.lua  pages.lua  theme.lua
config/themes/: dark.lua  init.lua  light.lua  mint.lua  rose_pine.lua
config/utils/: components.lua  init.lua  layout.lua
config/widgets/: bible.lua  clock.lua  crypto.lua  github.lua  quote.lua  rss.lua  status.lua  stocks.lua  sysinfo.lua  weather.lua
config/widgets/bible/: init.lua
config/widgets/clock/: init.lua
config/widgets/github/: colors.lua  fetch.lua  init.lua  render.lua
config/widgets/quote/: init.lua
config/widgets/rss/: render.lua
config/widgets/slideshow/: init.lua
config/widgets/status/: init.lua
config/widgets/stocks/: init.lua
moondeck-app/: Cargo.toml
moondeck-app/src/: main.rs
moondeck-core/: Cargo.toml  build.rs
moondeck-core/src/: lib.rs
moondeck-core/src/gfx/: bitmap_font.rs  color.rs  context.rs  font.rs  mod.rs  ttf_font.rs
moondeck-core/src/ui/: events.rs  mod.rs  page.rs  widget.rs
moondeck-core/src/util/: mod.rs  timing.rs
moondeck-hal/: Cargo.toml
moondeck-hal/src/: lib.rs
moondeck-hal/src/display/: framebuffer.rs  mod.rs  rgb_panel.rs
moondeck-hal/src/fs/: mod.rs  spiffs.rs
moondeck-hal/src/http/: mod.rs
moondeck-hal/src/touch/: gestures.rs  gt911.rs  mod.rs
moondeck-hal/src/wifi/: mod.rs
moondeck-lua/: Cargo.toml  build.rs
moondeck-lua/src/: lib.rs  plugin.rs  runtime.rs
moondeck-lua/src/bindings/: device.rs  env.rs  gfx.rs  lua_serde.rs  macros.rs  mod.rs  modules.rs  net.rs  system.rs  util.rs
moondeck-lua/src/vm/: ast.rs  bytecode.rs  codegen.rs  error.rs  fuel.rs  lexer.rs  mod.rs  parser.rs  runtime.rs  stdlib.rs  value.rs
