[package]
name = "moondeck-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
embedded-graphics.workspace = true
embedded-graphics-core.workspace = true
