[package]
name = "moondeck-lua"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["esp"]
esp = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
embedded-graphics.workspace = true
moondeck-core.workspace = true
moondeck-hal.workspace = true
